syntax = "proto3";

package logger;

option go_package = "webitel_logger/proto";
import "google/api/annotations.proto";

service LoggerService {
  rpc SearchLogByUserId(SearchLogByUserIdRequest) returns (Logs) {
    option (google.api.http) = {
      get: "/logger/user/{user_id}/logs"
    };
  }
  rpc SearchLogByConfigId(SearchLogByConfigIdRequest) returns (Logs) {
    option (google.api.http) = {
      get: "/logger/config/{config_id}/logs"
    };
  }
}

enum Action {
  defaultNoAction = 0;
  create = 1;
  update = 2;
  read = 3;
  delete = 4;
}

message SearchLogByConfigIdRequest {
  int32 page = 1;
  int32 size = 2;
  string q = 3;

  string sort = 5;
  repeated string fields = 6;

  // REQUIRED filter

  int32 config_id = 7;

  // SPECIFIC filter

  Lookup user = 9;

  // GENERAL filters

  Action action = 8;
  string user_ip = 10;
  int64 date_from = 11;
  int64 date_to = 12;
}

message SearchLogByUserIdRequest {
  int32 page = 1;
  int32 size = 2;
  string q = 3;

  string sort = 5;
  repeated string fields = 6;

  // REQUIRED filter
  int32 user_id = 7;

  // SPECIFIC filter
  Lookup object = 10;

  // GENERAL filters
  Action action = 8;
  string user_ip = 9;
  int64 date_from = 11;
  int64 date_to = 12;
}

message Logs {
  int32 page = 1;
  bool next = 2;
  repeated Log items = 3;
}

message Log {
  int32 id = 1;
  string action = 2;
  int64 date = 3;
  Lookup user = 4;
  string user_ip = 5;
  string new_state = 6;
  int32 config_id = 7;
  Lookup record = 8;
  Lookup object = 9;
}

message Lookup {
  int32 id = 1;
  string name = 2;
}
